tdf#120453 Preserve literal '&' in Qt menu texts

As described in the QMenuBar documentation,
a single ampersand in a menu item text is used to
set the shortcut for the menu, while "&&" is used to
get a real ampersand character.

Change-Id: Idf510641c8919ff8223114413851cb3ee7d7b4a2